--- a/src/App.css
+++ b/src/App.css
@@ -484,9 +484,11 @@ h6 {
   width: 100%;
   background: transparent;
   font-size: 1rem;
+  border-radius: 0.3rem;
 }
 .size-inputs {
   display: flex;
+  
 }
 .size-input {
   width: 40%;
